@@ -10,6 +10,7 @@
 	- permit --whatprovides to lookup file dependencies.
 	- fail to package if absolute symlink points within build root.
 	- initial version of check-prereqs.
+	- expose enough of legacy fdio interface to compile rpmfind/rpm2html.
 
 3.0.2 -> 3.0.3
 	- add --eval to find result of macro expansion.
